src/math_ops/snapshots/rbx_types_ops__math_ops__vec3int16__vec3int16_pow_f32.snap
---
source: src/math_ops/vec3int16.rs
expression: "Vector3int16::new(15, 15, 15).pow(&5f32.into())"
---
Vector3int16:
  - 32767
  - 32767
  - 32767
